--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>MasterUno - Ultimate Edition</title>
+    <title>MasterUno Ultimate</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
@@ -12,92 +12,103 @@
 
     <div id="loginScreen">
         <div class="main-box">
-            <h1 class="logo-title">MASTER <span>UNO</span></h1>
-            <input type="text" id="nickInput" placeholder="Inserisci Nickname" maxlength="12">
-            <input type="password" id="passInput" placeholder="Inserisci Password">
-            <div id="enterBtn" class="btn-yellow">Accedi</div>
+            <h1 class="logo-title">MASTER <span class="win-text">UNO</span></h1>
+            <input type="text" id="nickInput" placeholder="Nickname" maxlength="12">
+            <input type="password" id="passInput" placeholder="Password">
+            <div id="enterBtn" class="btn-yellow">ENTRA NEL TAVOLO</div>
+            <p style="font-size:12px; color:#aaa;">Vittorie: <span id="savedWins">0</span></p>
         </div>
     </div>
 
     <div id="startScreen" class="hidden">
         <div class="main-box">
-            <div class="lobby-header">
-                <div id="settingsBtn" class="icon-btn">⚙️</div>
+            <div style="display:flex; justify-content:space-between; align-items:center;">
+                <div id="settingsBtn" style="cursor:pointer; font-size:24px;">⚙️</div>
                 <h1 class="logo-title">LOBBY</h1>
+                <div style="width:24px;"></div>
             </div>
-            
             <div class="menu-section">
                 <div id="myPeerId" class="peer-display">----</div>
-                <div id="copyBtn" class="btn-yellow">Copia e Invita Amici</div>
+                <div id="copyBtn" class="btn-yellow">Copia ID Invito</div>
             </div>
-
             <div class="menu-section">
-                <input type="text" id="friendIdInput" placeholder="ID Amico">
-                <div id="connectBtn" class="btn-white">Unisciti alla Stanza</div>
+                <input type="text" id="friendIdInput" placeholder="Incolla ID Amico">
+                <div id="connectBtn" class="btn-white">Connettiti</div>
             </div>
-
             <div class="menu-section">
-                <div id="playBtn" class="btn-yellow">Avvia Partita (Bot inclusi)</div>
-                <p id="playerCount">Giocatori: 1 / 4</p>
+                <div id="startMatchBtn" class="btn-yellow">Avvia Partita</div>
             </div>
         </div>
     </div>
 
     <div id="settingsModal" class="hidden">
-        <div class="modal-box">
-            <h2>Impostazioni Gioco</h2>
-            <div class="setting-item">
-                <label>Max Giocatori (2-4)</label>
-                <input type="number" id="maxPlayersInput" value="4" min="2" max="4">
+        <div class="modal-overlay">
+            <div class="main-box">
+                <h3>IMPOSTAZIONI</h3>
+                <div class="stg-row">
+                    <label>Giocatori: </label>
+                    <select id="maxP"><option value="2">2</option><option value="3">3</option><option value="4" selected>4</option></select>
+                </div>
+                <div class="stg-row">
+                    <label>Regola 0-7: </label><input type="checkbox" id="check07">
+                </div>
+                <div class="stg-row">
+                    <label>Strascio (+): </label><input type="checkbox" id="checkStack" checked>
+                </div>
+                <div class="stg-row">
+                    <label>Combo: </label><input type="checkbox" id="checkCombo">
+                </div>
+                <div id="saveSettings" class="btn-yellow">SALVA</div>
             </div>
-            <div class="setting-item">
-                <label>Modalità 0-7 (Scambio Carte)</label>
-                <input type="checkbox" id="rule07Input">
-                <small>Lo 0 e il 7 invertono o scambiano le mani.</small>
-            </div>
-            <div class="setting-item">
-                <label>Pesca a Strascio</label>
-                <input type="checkbox" id="ruleStackInput" checked>
-                <small>Somma i +2 e i +4.</small>
-            </div>
-            <div class="setting-item">
-                <label>Combo Stesso Numero</label>
-                <input type="checkbox" id="ruleComboInput">
-                <small>Gioca più carte uguali insieme.</small>
-            </div>
-            <div id="saveSettingsBtn" class="btn-yellow">Salva e Chiudi</div>
         </div>
     </div>
 
     <div id="gameArea" class="hidden">
         <div id="turnIndicator">CARICAMENTO...</div>
         
-        <div id="otherPlayers" class="opponents-row">
-            </div>
+        <div id="opponentsArea"></div>
 
         <div id="centerArea">
             <div id="deck" class="card-back-classic"><span>MASTER</span><span>UNO</span></div>
             <div id="discardPile"></div>
-            <div id="stackIndicator"></div>
+            <div id="stackBadge"></div>
         </div>
 
-        <div class="player-section">
+        <div class="game-row">
             <div id="playerBadge" class="gold-badge">TU: 7</div>
             <div id="playerHand" class="hand"></div>
         </div>
 
         <div id="emojiPanel">
-            <span onclick="sendEmoji('🔥')">🔥</span>
-            <span onclick="sendEmoji('😂')">😂</span>
-            <span onclick="sendEmoji('🤡')">🤡</span>
-            <span onclick="sendEmoji('😠')">😠</span>
+            <button onclick="sendEmoji('🔥')">🔥</button>
+            <button onclick="sendEmoji('😂')">😂</button>
+            <button onclick="sendEmoji('🤡')">🤡</button>
+            <button onclick="sendEmoji('😠')">😠</button>
         </div>
 
         <button id="masterUnoBtn" class="hidden">MASTER UNO!</button>
     </div>
 
-    <div id="colorPicker" class="hidden">...</div>
-    <div id="endScreen" class="hidden">...</div>
+    <div id="colorPicker" class="hidden">
+        <div class="picker-box">
+            <h3>Scegli Colore</h3>
+            <div class="pick-grid">
+                <div class="pick red" onclick="setWildColor('red')"></div>
+                <div class="pick blue" onclick="setWildColor('blue')"></div>
+                <div class="pick green" onclick="setWildColor('green')"></div>
+                <div class="pick yellow" onclick="setWildColor('yellow')"></div>
+            </div>
+        </div>
+    </div>
+
+    <div id="endScreen" class="hidden">
+        <div class="main-box">
+            <h1 id="endTitle" class="end-title">VITTORIA!</h1>
+            <div class="menu-section">
+                <div onclick="location.reload()" class="btn-yellow">Nuova Partita</div>
+            </div>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
